Collision now works with two axis + all input now over axis

--- a/PongKlohn/Assembly-CSharp-vs.csproj
+++ b/PongKlohn/Assembly-CSharp-vs.csproj
@@ -47,11 +47,16 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Ball.cs" />
+     <Compile Include="Assets\Scripts\Easing.cs" />
+     <Compile Include="Assets\Scripts\EasingTest.cs" />
      <Compile Include="Assets\Scripts\Game.cs" />
+     <Compile Include="Assets\Scripts\GameMechanics.cs" />
      <Compile Include="Assets\Scripts\Level.cs" />
      <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\Trigger\GoalTrigger.cs" />
      <Compile Include="Assets\Scripts\Trigger\WallTrigger.cs" />
+     <None Include="Assets\Scripts\Easing.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
