--- a/PongKlohn/Assembly-CSharp.csproj
+++ b/PongKlohn/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\Player.cs" />
      <Compile Include="Assets\Scripts\PlayerInput.cs" />
      <Compile Include="Assets\Scripts\Trigger\GoalTrigger.cs" />
+     <Compile Include="Assets\Scripts\Trigger\PushPadTrigger.cs" />
      <Compile Include="Assets\Scripts\Trigger\WallTrigger.cs" />
      <None Include="Assets\Scripts\Easing.txt" />
  <Reference Include="UnityEngine.UI">
