--- a/PongKlohn/Assets/savegame.ini
+++ b/PongKlohn/Assets/savegame.ini
@@ -1,25 +1,33 @@
 [Player]
-playerStartCrystalCount=2
-playerCrystalCount=2
+playerStartCrystalCount=4
+playerCrystalCount=4
 playerStillAllive=True
 [Ai]
-aiStartCrystalCount 0=4
-aiStartCrystalCount 1=4
-aiStartCrystalCount 2=7
-aiStartCrystalCount 3=5
-aiStartCrystalCount 4=4
-aiCrystalCount 0=4
-aiCrystalCount 1=4
-aiCrystalCount 2=7
-aiCrystalCount 3=5
-aiCrystalCount 4=4
+aiStartCrystalCount 0=2
+aiStartCrystalCount 1=3
+aiStartCrystalCount 2=5
+aiStartCrystalCount 3=3
+aiStartCrystalCount 4=5
+aiCrystalCount 0=2
+aiCrystalCount 1=3
+aiCrystalCount 2=5
+aiCrystalCount 3=3
+aiCrystalCount 4=5
 aiStillAlive 0=True
 aiStillAlive 1=True
 aiStillAlive 2=True
 aiStillAlive 3=True
 aiStillAlive 4=True
+aiDifficulty 0=2
+aiDifficulty 1=2
+aiDifficulty 2=1
+aiDifficulty 3=2
+aiDifficulty 4=1
 [Game]
-round=1
-match=2
+round=4
+match=4
 winner=1
 roundContinues=False
+crystalUnlocked 0=True
+crystalUnlocked 1=True
+crystalUnlocked 2=False
