code + UI tweaks

--- a/PongKlohn/Assets/SaveGames/savegame.ini
+++ b/PongKlohn/Assets/SaveGames/savegame.ini
@@ -1,21 +1,21 @@
 [Player]
-playerStartCrystalCount=3
-playerCrystalCount=4
+playerStartCrystalCount=2
+playerCrystalCount=2
 playerStillAllive=True
 [Ai]
 aiStartCrystalCount 0=1
-aiStartCrystalCount 1=1
+aiStartCrystalCount 1=0
 aiStartCrystalCount 2=1
-aiStartCrystalCount 3=1
-aiStartCrystalCount 4=1
-aiCrystalCount 0=0
+aiStartCrystalCount 3=0
+aiStartCrystalCount 4=0
+aiCrystalCount 0=1
 aiCrystalCount 1=0
-aiCrystalCount 2=0
+aiCrystalCount 2=1
 aiCrystalCount 3=0
 aiCrystalCount 4=0
-aiStillAlive 0=False
+aiStillAlive 0=True
 aiStillAlive 1=False
-aiStillAlive 2=False
+aiStillAlive 2=True
 aiStillAlive 3=False
 aiStillAlive 4=False
 aiDifficulty 0=3
@@ -24,7 +24,7 @@ aiDifficulty 2=3
 aiDifficulty 3=3
 aiDifficulty 4=3
 [Game]
-round=7
+round=2
 match=0
 winner=1
 roundContinues=False
