--- a/PongKlohn/Assets/SaveGames/savegame.ini
+++ b/PongKlohn/Assets/SaveGames/savegame.ini
@@ -1,39 +1,39 @@
 [Player]
-playerStartCrystalCount=2
-playerCrystalCount=2
+playerStartCrystalCount=1
+playerCrystalCount=-1
 playerStillAllive=True
 [Ai]
-aiStartCrystalCount 0=1
-aiStartCrystalCount 1=0
-aiStartCrystalCount 2=1
-aiStartCrystalCount 3=0
-aiStartCrystalCount 4=0
-aiCrystalCount 0=1
-aiCrystalCount 1=0
-aiCrystalCount 2=1
-aiCrystalCount 3=0
-aiCrystalCount 4=0
+aiStartCrystalCount 0=-1
+aiStartCrystalCount 1=-1
+aiStartCrystalCount 2=-1
+aiStartCrystalCount 3=-1
+aiStartCrystalCount 4=-1
+aiCrystalCount 0=-1
+aiCrystalCount 1=-1
+aiCrystalCount 2=-1
+aiCrystalCount 3=-1
+aiCrystalCount 4=-1
 aiStillAlive 0=True
-aiStillAlive 1=False
+aiStillAlive 1=True
 aiStillAlive 2=True
-aiStillAlive 3=False
-aiStillAlive 4=False
-aiDifficulty 0=3
-aiDifficulty 1=3
-aiDifficulty 2=3
-aiDifficulty 3=3
-aiDifficulty 4=3
+aiStillAlive 3=True
+aiStillAlive 4=True
+aiDifficulty 0=-1
+aiDifficulty 1=-1
+aiDifficulty 2=-1
+aiDifficulty 3=-1
+aiDifficulty 4=-1
 [Game]
-round=2
-match=0
-winner=1
-roundContinues=False
-crystalUnlocked 0=True
-crystalUnlocked 1=True
-crystalUnlocked 2=True
-enemyCharacter=1
+round=-1
+match=-1
+winner=-1
+roundContinues=True
+crystalUnlocked 0=False
+crystalUnlocked 1=False
+crystalUnlocked 2=False
+enemyCharacter=-1
 [Other]
-unlock0HasBeenShown=True
-unlock1HasBeenShown=True
-unlock2HasBeenShown=True
-deleted=False
+unlock0HasBeenShown=False
+unlock1HasBeenShown=False
+unlock2HasBeenShown=False
+deleted=True
