--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 PongKlohn/.vs/**
 PongKlohn/Library/ShaderCache/**
 PongKlohn/Library/CurrentLayout.dwlt
+PongKlohn/Library/CurrentMaximizeLayout.dwlt
 PongKlohn/Builds/**
 PongKlohn/Build/**
 PongKlohn/Temp/**
