ai changes + versus endscreen update

--- a/PongKlohn/Assets/SaveGames/savegame.ini
+++ b/PongKlohn/Assets/SaveGames/savegame.ini
@@ -1,39 +1,39 @@
 [Player]
 playerStartCrystalCount=1
-playerCrystalCount=-1
+playerCrystalCount=1
 playerStillAllive=True
 [Ai]
-aiStartCrystalCount 0=-1
-aiStartCrystalCount 1=-1
-aiStartCrystalCount 2=-1
-aiStartCrystalCount 3=-1
-aiStartCrystalCount 4=-1
-aiCrystalCount 0=-1
-aiCrystalCount 1=-1
-aiCrystalCount 2=-1
-aiCrystalCount 3=-1
-aiCrystalCount 4=-1
+aiStartCrystalCount 0=1
+aiStartCrystalCount 1=8
+aiStartCrystalCount 2=4
+aiStartCrystalCount 3=9
+aiStartCrystalCount 4=3
+aiCrystalCount 0=1
+aiCrystalCount 1=8
+aiCrystalCount 2=4
+aiCrystalCount 3=9
+aiCrystalCount 4=3
 aiStillAlive 0=True
 aiStillAlive 1=True
 aiStillAlive 2=True
 aiStillAlive 3=True
 aiStillAlive 4=True
-aiDifficulty 0=-1
-aiDifficulty 1=-1
-aiDifficulty 2=-1
-aiDifficulty 3=-1
-aiDifficulty 4=-1
+aiDifficulty 0=3
+aiDifficulty 1=1
+aiDifficulty 2=1
+aiDifficulty 3=1
+aiDifficulty 4=2
 [Game]
-round=-1
-match=-1
-winner=-1
+round=1
+match=1
+winner=1
 roundContinues=True
 crystalUnlocked 0=False
 crystalUnlocked 1=False
 crystalUnlocked 2=False
-enemyCharacter=-1
+enemyCharacter=2
 [Other]
 unlock0HasBeenShown=False
 unlock1HasBeenShown=False
 unlock2HasBeenShown=False
-deleted=True
+deleted=False
