--- a/PongKlohn/Assets/SaveGames/savegame.ini
+++ b/PongKlohn/Assets/SaveGames/savegame.ini
@@ -1,23 +1,23 @@
 [Player]
-playerStartCrystalCount=2
+playerStartCrystalCount=1
 playerCrystalCount=2
 playerStillAllive=True
 [Ai]
-aiStartCrystalCount 0=1
+aiStartCrystalCount 0=2
 aiStartCrystalCount 1=1
-aiStartCrystalCount 2=1
-aiStartCrystalCount 3=0
+aiStartCrystalCount 2=2
+aiStartCrystalCount 3=1
 aiStartCrystalCount 4=1
 aiCrystalCount 0=1
-aiCrystalCount 1=1
+aiCrystalCount 1=0
 aiCrystalCount 2=1
 aiCrystalCount 3=0
-aiCrystalCount 4=1
+aiCrystalCount 4=0
 aiStillAlive 0=True
-aiStillAlive 1=True
+aiStillAlive 1=False
 aiStillAlive 2=True
 aiStillAlive 3=False
-aiStillAlive 4=True
+aiStillAlive 4=False
 aiDifficulty 0=3
 aiDifficulty 1=3
 aiDifficulty 2=3
@@ -33,7 +33,7 @@ crystalUnlocked 1=False
 crystalUnlocked 2=False
 enemyCharacter=1
 [Other]
-unlock0HasBeenShown=True
+unlock0HasBeenShown=False
 unlock1HasBeenShown=False
 unlock2HasBeenShown=False
 deleted=False
